<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Muuvi</string>
    <string name="facebook_app_id" translatable="false">280633579709157</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb280633579709157</string>
    <string name="log_in">Log In</string>
    <string name="phone_number_email_or_username">Phone number, email or username</string>
    <string name="password">Password</string>
    <string name="forgot_your_details">Forgot your details?</string>
    <string name="get_help_signing_in">Get help signing in.</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_">Sign up.</string>
    <string name="activeLanguage">English</string>
    <string name="select_your_language">Select your language</string>
    <string name="search">Search</string>
    <string name="find_your_account">Find Your Account</string>
    <string name="enter_your_username_or_the_email_or_phone_number_linked_to_your_account">Enter your username or the email or phone number linked to your account</string>
    <string name="username_or_email" tools:ignore="MissingTranslation">Username or email</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_">Log in.</string>
    <string name="sign_up_with_email_or_phone_number">Sign up with email or phone number</string>
    <string name="couldnt_log_in_please_try_again_later" tools:ignore="MissingTranslation">Couldn\'t log in, please try again later.</string>
    <string name="something_went_wrong_please_try_again_later" tools:ignore="MissingTranslation">Something went wrong, please try again later.</string>
    <string name="welcome_to_muuvi" tools:ignore="MissingTranslation">Welcome to Muuvi</string>
    <string name="pick_username_for_your_account_you_can_always_change_it_later" tools:ignore="MissingTranslation">Pick username for your account. You can always change it later.</string>
    <string name="username" tools:ignore="MissingTranslation">Username</string>
    <string name="username_not_available" tools:ignore="MissingTranslation">Username not available</string>
    <string name="usernames_can_only_use_letters_numbers_underscores_and_periods" tools:ignore="MissingTranslation">Usernames can only use letters, numbers, underscores and periods.</string>
    <string name="username_cannot_be_empty" tools:ignore="MissingTranslation">Username cannot be empty</string>
    <string name="add_profile_photo" tools:ignore="MissingTranslation">Add Profile Photo</string>
    <string name="add_a_profile_photo_so_your_friends_know_its_you" tools:ignore="MissingTranslation">Add a profile photo so your friends know it\'s you.</string>
    <string name="add_a_photo" tools:ignore="MissingTranslation">Add a Photo</string>
    <string name="skip" tools:ignore="MissingTranslation">Skip</string>
    <string name="change_profile_photo" tools:ignore="MissingTranslation">Change Profile Photo</string>
    <string name="import_from_facebook" tools:ignore="MissingTranslation">Import from Facebook</string>
    <string name="take_photo" tools:ignore="MissingTranslation">Take Photo</string>
    <string name="choose_from_library" tools:ignore="MissingTranslation">Choose from Library</string>
    <string name="by_clicking_next_you_agree_to_our" tools:ignore="MissingTranslation">By clicking Next, you agree to our</string>
    <string name="privacy_policy" tools:ignore="MissingTranslation">Privacy Policy,</string>
    <string name="terms_and_conditions" tools:ignore="MissingTranslation">Terms &amp; Conditions.</string>
    <string name="an_unknown_network_error_has_occurred" tools:ignore="MissingTranslation">An unknown network error has occurred.</string>
    <string name="dismiss" tools:ignore="MissingTranslation">Dismiss</string>
    <string name="couldnt_get_profile_picture_from_facebook" tools:ignore="MissingTranslation">Couldn\'t get profile picture from Facebook.</string>
    <string name="cannot_retrieve_cropped_image" tools:ignore="MissingTranslation">Cannot retrieve cropped image.</string>
    <string name="couldnt_save_profile_picture" tools:ignore="MissingTranslation">Couldn\'t save profile picture.</string>
    <string name="phone" tools:ignore="MissingTranslation">Phone</string>
    <string name="email" tools:ignore="MissingTranslation">Email</string>
    <string name="you_may_receive_sms_updates_from_muuvi_and_can_opt_out_at_any_time" tools:ignore="MissingTranslation">You may receive SMS updates from Muuvi and can opt out at any time.</string>
    <string name="select_your_country" tools:ignore="MissingTranslation">Select your country</string>
    <string name="country_name_or_code" tools:ignore="MissingTranslation">Country name or code</string>
    <string name="invalid_phone_number" tools:ignore="MissingTranslation">Invalid phone number.</string>
    <string name="quota_exceeded" tools:ignore="MissingTranslation">Quota exceeded.</string>
    <string name="enter_confirmation_code" tools:ignore="MissingTranslation">Enter confirmation code</string>
    <string name="enter_the_six_digit_code_we_sent_to" tools:ignore="MissingTranslation">Enter the 6-digit code we sent to</string>
    <string name="request_a_new_one" tools:ignore="MissingTranslation">Request a new one.</string>
    <string name="confirmation_code" tools:ignore="MissingTranslation">Confirmation Code</string>
    <string name="phone_number_already_exists_try_to_log_in_instead" tools:ignore="MissingTranslation">Phone number already exists, try to log in instead.</string>
    <string name="confirm_password" tools:ignore="MissingTranslation">Confirm Password</string>
    <string name="we_sent_a_verification_link_to_your_email_address_please_verify_your_email_address_to_continue" tools:ignore="MissingTranslation">We sent a verification link to your email address. Please verify your email address to continue.</string>
    <string name="please_verify_your_email_address_to_continue" tools:ignore="MissingTranslation">Please verify your email address to continue.</string>
    <string name="username_cannot_start_with_a_number" tools:ignore="MissingTranslation">Username cannot start with a number.</string>
    <string name="please_add_phone_number_code_of_your_country" tools:ignore="MissingTranslation">Please, add the phone number code of your country. (e.g. +1xxx)</string>
    <string name="theres_no_user_linked_to_this_phone_number_try_to_sign_up_instead" tools:ignore="MissingTranslation">There\'s no user linked to this phone number, try to sign up instead.</string>
    <string name="theres_no_user_linked_to_this_username_try_to_sign_up_instead" tools:ignore="MissingTranslation">There\'s no user linked to this username, try to sign up instead.</string>
    <string name="please_check_your_email_to_reset_your_password" tools:ignore="MissingTranslation">Please check your email to reset your password.</string>
    <string name="you_can_log_in_with_your_phone_number_linked_to_your_username" tools:ignore="MissingTranslation">You can log in with your phone number linked to your username.</string>
    <string name="you_can_log_in_with_your_facebook_account" tools:ignore="MissingTranslation">You can log in with your Facebook account.</string>
    <string name="home" tools:ignore="MissingTranslation">Home</string>
    <string name="add" tools:ignore="MissingTranslation">Add</string>
    <string name="top" tools:ignore="MissingTranslation">Top</string>
    <string name="profile" tools:ignore="MissingTranslation">Profile</string>
    <string name="movie_or_series" tools:ignore="MissingTranslation">Movie or series</string>
    <string name="searching_for" tools:ignore="MissingTranslation">Searching for</string>
    <string-array name="primaryLanguageName">
        <item>English</item>
        <item>Afrikaans</item>
        <item>Bahasa Indonesia</item>
        <item>Bahasa Melayu</item>
        <item>Dansk</item>
        <item>Deutsch</item>
        <item>English (UK)</item>
        <item>Español</item>
        <item>Español (España)</item>
        <item>Filipino</item>
        <item>Français (Canada)</item>
        <item>Français (France)</item>
        <item>Hrvatski</item>
        <item>Italiano</item>
        <item>Magyar</item>
        <item>Nederlands</item>
        <item>Norsk (bokmål)</item>
        <item>Polski</item>
        <item>Português (Brasil)</item>
        <item>Português (Portugal)</item>
        <item>Română</item>
        <item>Slovenčina</item>
        <item>Suomi</item>
        <item>Svenska</item>
        <item>Tiếng Việt</item>
        <item>Türkçe</item>
        <item>Čeština</item>
        <item>Ελληνικά</item>
        <item>Български</item>
        <item>Pусский</item>
        <item>Українська</item>
        <item>српски</item>
        <item>עברית</item>
        <item>اَلْعَرَبِيَّةُ</item>
        <item>فارسی</item>
        <item>हिन्दी</item>
        <item>ภาษาไทย</item>
        <item>中文(简体)</item>
        <item>中文(台灣)</item>
        <item>中文(香港)</item>
        <item>日本語</item>
        <item>한국어</item>
    </string-array>
    <string-array name="secondaryLanguageName">
        <item>-</item>
        <item>-</item>
        <item>Indonesian</item>
        <item>Malay</item>
        <item>Danish</item>
        <item>German</item>
        <item>-</item>
        <item>Spanish (Latin America)</item>
        <item>Spanish (Spain)</item>
        <item>-</item>
        <item>French (Canada)</item>
        <item>French (France)</item>
        <item>Croatian</item>
        <item>Italian</item>
        <item>Hungarian</item>
        <item>Dutch</item>
        <item>Norwegian (bokmal)</item>
        <item>Polish</item>
        <item>Portuguese (Brazil)</item>
        <item>Portuguese (Portugal)</item>
        <item>Romanian</item>
        <item>Slovak</item>
        <item>Finnish</item>
        <item>Swedish</item>
        <item>Vietnamese</item>
        <item>Turkish</item>
        <item>Czech</item>
        <item>Greek</item>
        <item>Bulgarian</item>
        <item>Russian</item>
        <item>Ukrainian</item>
        <item>Serbian</item>
        <item>Hebrew</item>
        <item>Arabic</item>
        <item>Persian</item>
        <item>Hindi</item>
        <item>Thai</item>
        <item>Chinese (Simplified)</item>
        <item>Chinese (Traditional, Taiwan)</item>
        <item>Chinese (Traditional, Hong Kong)</item>
        <item>Japanese</item>
        <item>Korean</item>
    </string-array>
</resources>