<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:orderInCategory="200"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/addFragment"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:orderInCategory="300"
        android:title="@string/add"
        app:showAsAction="always" />

    <item
        android:id="@+id/topFragment"
        android:enabled="true"
        android:icon="@drawable/ic_top"
        android:orderInCategory="400"
        android:title="@string/top"
        app:showAsAction="always" />

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:orderInCategory="500"
        android:title="@string/profile"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

</menu>