<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/change_profile_photo"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/layout_change_profile_photo_importFromFacebookMTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/import_from_facebook"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/layout_change_profile_photo_takePhotoMTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/take_photo"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/layout_change_profile_photo_chooseFromLibraryMTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/choose_from_library"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

</LinearLayout>