<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SignUpUserImageFragment">

        <LinearLayout
            android:id="@+id/fragment_sing_up_user_image_mainLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/fragment_sign_up_user_image_userImageIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/default_user_image" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_profile_photo"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/add_a_profile_photo_so_your_friends_know_its_you"
                android:textColor="@color/colorNine" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_sign_up_user_image_addAPhotoMBTN"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorOne"
                android:text="@string/add_a_photo"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_sign_up_user_image_skipMTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/skip"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/fragment_sign_up_user_image_mainPB"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorOne"
            android:indeterminateTintMode="src_atop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>