<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="logInHelpViewModel"
            type="com.martiandeveloper.muuvi.viewmodel.LogInHelpViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        tools:context=".view.LogInHelpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/fragment_log_in_help_mainLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                app:layout_constraintBottom_toTopOf="@+id/fragment_log_in_help_facebookLL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_your_account"
                    android:textColor="@color/colorPrimary"
                    android:textSize="32sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:text="@string/enter_your_username_or_the_email_or_phone_number_linked_to_your_account"
                    android:textColor="@color/colorNine" />

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/fragment_log_in_help_usernameEmailPhoneACT"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/username_or_email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@={logInHelpViewModel.usernameEmailPhoneACTContent}"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorEight"
                    android:textCursorDrawable="@null"
                    android:textSize="15sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_log_in_help_nextMBTN"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/colorOne"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_log_in_help_facebookLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_log_in_help_mainLL"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="3dp"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/facebook" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fragment_log_in_help_logInWithFacebookMTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/log_in_with_facebook"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/fragment_log_in_help_mainPB"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorOne"
                android:indeterminateTintMode="src_atop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>