<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="signUpUsernameViewModel"
            type="com.martiandeveloper.muuvi.viewmodel.SignUpUsernameViewModel" />

        <variable
            name="isErrorMTVGone"
            type="java.lang.Boolean" />

        <variable
            name="error"
            type="java.lang.String" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        tools:context=".view.SignUpUsernameFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/fragment_sign_up_username_mainLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_username_bottomLL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/welcome_to_muuvi"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/pick_username_for_your_account_you_can_always_change_it_later"
                    android:textColor="@color/colorNine" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fragment_sign_up_username_errorMTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@{error}"
                    android:textColor="@color/colorTen"
                    android:visibility="@{isErrorMTVGone ? View.GONE : View.VISIBLE}" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/fragment_sign_up_username_usernameET"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/username"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:longClickable="false"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@={signUpUsernameViewModel.usernameETContent}"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorEight"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp"
                        tools:ignore="Autofill" />

                    <ProgressBar
                        android:id="@+id/fragment_sign_up_username_usernamePB"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginEnd="10dp" />
                </FrameLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_sign_up_username_nextMBTN"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/colorOne"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_sign_up_username_bottomLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/by_clicking_next_you_agree_to_our"
                    android:textColor="@color/colorNine" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fragment_sign_up_username_privacyPolicyMTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/colorEight"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fragment_sign_up_username_termsAndConditionsMTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/terms_and_conditions"
                        android:textColor="@color/colorEight"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/fragment_sign_up_username_mainPB"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorOne"
                android:indeterminateTintMode="src_atop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>